# pydantic-error-handling

./: .gitignore  CHANGELOG.md  PUBLISHING.md  README.md  __init__.py  _core.py  decorator.py  notes.md  pyproject.toml  pyrightconfig.json  test_custom_patterns.py
error_handling/: __init__.py  collection_errors.py  datetime_errors.py  email_url_errors.py  extra_field_errors.py  json_errors.py  missing_errors.py  shared.py  type_errors.py  union_errors.py  uuid_errors.py  validation_errors.py
models/: __init__.py  models.py
src/pydantic_error_handling/: __init__.py  _core.py  decorator.py  error_handling.py
src/pydantic_error_handling/error_handling/: collection_errors.py  datetime_errors.py  extra_field_errors.py  json_errors.py  missing_errors.py  type_errors.py  union_errors.py
src/pydantic_error_handling/models/: __init__.py  models.py
tests/: test_decorator.py  test_field_config_coverage.py  test_json_errors.py  test_models.py  test_nested_errors.py  test_verbose_errors.py
