[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pydantic-error-handling"
version = "0.1.1"
description = "Human-readable verbose error messages for Pydantic validation errors"
readme = "README.md"
license = "MIT"

requires-python = ">=3.10"
authors = [
    { name = "Scott Phillips" }
]
keywords = ["pydantic", "validation", "errors", "verbose"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.4,<3.0",
]

[project.urls]
Homepage = "https://github.com/scottp2008/pydantic-error-handling"
Repository = "https://github.com/scottp2008/pydantic-error-handling"
Issues = "https://github.com/scottp2008/pydantic-error-handling/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["pydantic_error_handling", "pydantic_error_handling.models"]

[tool.setuptools.package-data]
pydantic_error_handling = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
